# monad

./: .bazelrc  .envrc  .gitmodules  BUILD  CMakeLists.txt  MODULE.bazel  README.md  flake.nix  monad.bzl  nixpkgs.nix  riscv64-none-elf.nix  to_string.cpp
category/async/: BUILD  io.hpp  io_senders.hpp
category/core/: BUILD  CMakeLists.txt  bytes_hash_compare.hpp  config.hpp  int.hpp
category/core/runtime/: non_temporal_memory.hpp  uint256.hpp
category/core/test/: CMakeLists.txt  to_big_endian_test.cpp
category/core/toolchains/: riscv64-elf-toolchain.cmake
category/execution/: BUILD  CMakeLists.txt
category/execution/ethereum/: block_hash_buffer.hpp  block_hash_history.cpp  block_hash_history_test.cpp  block_reward_test.cpp  evm.cpp  evm_test.cpp  evmc_host_test.cpp  execute_block.cpp  execute_block_test.cpp  execute_transaction.cpp  execute_transaction_test.cpp  precompiles_gas_cost_impl.cpp  precompiles_impl.cpp  precompiles_test.cpp  process_requests.cpp  process_requests.hpp  reserve_balance.cpp  reserve_balance.hpp  tx_context.cpp  validate_transaction.cpp
category/execution/ethereum/chain/: chain.hpp  genesis_state.cpp  hive_net.cpp  hive_net.hpp  hive_net_alloc.hpp
category/execution/ethereum/core/: receipt.cpp
category/execution/ethereum/core/contract/: test_storage.cpp
category/execution/ethereum/db/: block_db.cpp  commit_builder.cpp  commit_builder.hpp  db.hpp  db_cache.hpp  db_snapshot.cpp  page_storage_cache.hpp  rle.cpp  rle.hpp  storage_page.cpp  storage_page.hpp  trie_db.cpp  trie_db.hpp  trie_rodb.hpp  util.cpp  util.hpp
category/execution/ethereum/db/test/: commit_simple.hpp  test_db.cpp
category/execution/ethereum/event/: record_txn_events.cpp
category/execution/ethereum/metrics/: block_metrics.hpp
category/execution/ethereum/rlp/: decode.hpp  encode2.hpp
category/execution/ethereum/state2/: block_state.cpp  block_state.hpp
category/execution/ethereum/state2/test/: test_state.cpp
category/execution/ethereum/state3/: account_state.hpp  state.cpp  state.hpp
category/execution/ethereum/test/: test_call_trace.cpp  test_db_snapshot.cpp  test_monad_chain.cpp  test_traits_state.hpp
category/execution/ethereum/trace/: state_tracer.cpp  state_tracer.hpp  state_tracer_test.cpp
category/execution/monad/: execute_system_transaction_test.cpp  monad_block_hash_history_test.cpp  monad_precompiles_gas_cost_impl.cpp  reserve_balance.cpp  reserve_balance.hpp  validate_monad_transaction.cpp
category/execution/monad/chain/: monad_devnet.cpp
category/execution/monad/db/: commit_builder.cpp  monad_commit_builder.cpp  monad_commit_builder.hpp  monad_machine.cpp  monad_machine.hpp  monad_page_storage_cache.hpp  storage_page.cpp  storage_page.hpp  test_monad_db.cpp  test_page_storage_cache.cpp
category/execution/monad/reserve_balance/: reserve_balance_contract_test.cpp
category/execution/monad/staking/: read_valset.cpp  test_read_valset.cpp  test_staking_contract.cpp
category/execution/monad/staking/fuzzer/: staking_contract_machine.cpp  staking_contract_model.hpp
category/execution/runloop/: runloop_interface_monad.cpp  runloop_interface_monad.h  runloop_monad.hpp
category/mpt/: BUILD  copy_trie.cpp  db.cpp  deserialize_node_from_receiver_result.hpp  node.cpp  read_node_blocking.cpp  trie.cpp  trie.hpp  update_aux.cpp
category/mpt/test/: append_test.cpp  db_test.cpp  merkle_trie_test.cpp  min_truncated_offsets_test.cpp  node_writer_test.cpp  rewind_test.cpp  test_fixtures_base.hpp  update_aux_test.cpp
category/rpc/: BUILD  monad_executor.cpp  monad_executor.h  monad_executor_test.cpp
category/statesync/: BUILD  statesync_client.cpp  statesync_client_context.cpp  statesync_client_context.hpp  statesync_protocol.cpp  statesync_server_context.cpp  statesync_server_context.hpp  statesync_version.cpp  statesync_version.h
category/statesync/test/: fuzz_statesync.cpp  test_statesync.cpp
category/vm/: BUILD
category/vm/compiler/: BUILD
category/vm/core/: BUILD  assert.cpp
category/vm/evm/: BUILD  delegation.hpp
category/vm/fuzzing/: BUILD
category/vm/interpreter/: BUILD  CMakeLists.txt  debug.hpp  execute.cpp  instruction_table.hpp  push.hpp
category/vm/runtime/: BUILD  CMakeLists.txt  allocator.cpp  allocator.hpp  cached_allocator.hpp  context.cpp  exit.cpp  math.hpp  transmute.hpp  types.hpp
category/vm/utils/: BUILD
category/zkvm/: CMakeLists.txt
category/zkvm/include/category/core/runtime/: uint256.hpp
category/zkvm/include/category/zkvm/: zkvm_allocator.h  zkvm_exit.h
category/zkvm/src/: libc.cpp  libstdcxx.cpp
cmake/: compile_options.cmake  test_resource_data.h.in
cmd/: BUILD  CMakeLists.txt  monad_cli.cpp
cmd/monad/: main.cpp  runloop_ethereum.cpp  runloop_monad.cpp  runloop_monad.hpp  runloop_monad_ethblocks.cpp
docker/: Dockerfile
overlays/: BUILD  llvmPackages_19_libstdcxx_gcc_15_slim.nix
overlays/patches/: BUILD  clang-separate-static-libdir.patch  llvm-separate-static-libdir.patch  polly-separate-static-libdir.patch
rocq/uint256/: README.md  _CoqProject
rocq/uint256/theories/: Division.v  DivisionProofs.v  Primitives.v  RuntimeMul.v  RuntimeMulProofs.v  Spec.v  Uint.v
test/ethereum_test/src/: blockchain_test.cpp
test/unit/common/: BUILD
test/vm/unit/: BUILD
test/vm/utils/: BUILD
